--- a/Makefile.build
+++ b/Makefile.build
@@ -31,6 +31,8 @@ devices_SRC += devices/disk.c		# IDE disk device.
 devices_SRC += devices/input.c		# Serial and keyboard input.
 devices_SRC += devices/intq.c		# Interrupt queue.
 devices_SRC += devices/rtc.c		# Real-time clock.
+devices_SRC += devices/pit.c		# Real-time clock.
+
 
 # Library code shared between kernel and user programs.
 lib_SRC  = lib/debug.c			# Debug helpers.
